--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.3.1",
+    "express": "^4.17.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.1.1"
+    "react-scripts": "3.1.1",
+    "socket.io": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -27,5 +30,26 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/operationsspatial/jarvisweb.git"
+  },
+  "keywords": [
+    "react",
+    "general",
+    "artificial",
+    "intelligence",
+    "conversational",
+    "interface"
+  ],
+  "author": "michael gordon",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/operationsspatial/jarvisweb/issues"
+  },
+  "homepage": "https://github.com/operationsspatial/jarvisweb#readme"
 }
